Fix the documented bugs and dead code (#698)
* Fix documented bugs (except 3 and 4, these are intentional)

* Added failing for inline join table and globalTable (parse errors to be fixed)

* Fixed inline joins

* Fixed unreadable/dead code items

* Clarifying comment, replace if with switch, update doc

* Removed unused code, simplify where possible, some clarifying comments, update doc

* Add section on possible DataSchemaMapper refactoring

* - Change cache duration to non-zero
 - replace inheritance with encapsulation
 - update document

* fix review comments

* Sonar and code analysis fixes

---------

Co-authored-by: Ton van Bart <ton@axual.com>